[gd_scene load_steps=5 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]
[ext_resource path="res://ArenaActors/PlayerArena.gd" type="Script" id=2]
[ext_resource path="res://Textures/Idle.png" type="Texture" id=3]
[ext_resource path="res://ArenaActors/EnnemiArena.tscn" type="PackedScene" id=4]

[node name="Arena" type="Node2D"]
position = Vector2( -512, -296 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 296 )
current = true
smoothing_enabled = true

[node name="ArPlayer" type="KinematicBody2D" parent="." groups=["PlayerArena"]]
position = Vector2( 216, 296 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="ArPlayer"]
position = Vector2( -1, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ArPlayer"]
position = Vector2( -2, 0 )
polygon = PoolVector2Array( -23, -8, 0, -20, 20, -11, 27, 18, 3, 25, -12, 24, -26, 16 )

[node name="Area2D" type="Area2D" parent="ArPlayer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ArPlayer/Area2D"]
polygon = PoolVector2Array( -28, -10.6667, -1.33331, -24, 21.3333, -13.3333, 29.3333, 20, 2.66669, 29.3333, -16, 28, -32, 18.6667 )

[node name="EnnemiArena" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 296 )

[node name="Timer" type="Timer" parent="."]
wait_time = 24.0
one_shot = true
autostart = true

[connection signal="ready" from="." to="." method="_on_Arena_ready"]
[connection signal="area_entered" from="ArPlayer/Area2D" to="ArPlayer" method="_on_Area2D_area_entered"]
